[tool.poetry]
name = "me_backup"
version = "0.1.0"
description = "Simple linux backup controled by a YAML file."
authors = ["Lucas <lucasbmello96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "latest"
python-crontab = "^2.5.1"
click = "^8.0.1"
wakeonlan = "^2.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.9.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
